alignedPara on ALL pages is now fixed and left aligned - ContactUs page heading and paragraph now aligned and more responsive on all screens

--- a/src/App.css
+++ b/src/App.css
@@ -264,9 +264,9 @@ button.active {
 
 .alignedPara {
   text-align: center;
-  word-wrap: break-word;
-  word-break: break-all;
-  text-align-last: left;
+  word-wrap: normal;
+  /* word-break: break-all; */
+  text-align: left;
   margin-left: 20px;
   text-decoration: none;
 }
@@ -713,11 +713,17 @@ input:active {
   /* display: grid; */
   /* grid-template-columns: 60%; */
   width: 100%;
-  height: 1260px;
+  height: 1440px;
   margin-left: auto;
   margin-right: auto;
+}
 
-
+.contactUsHeading {
+  text-transform: uppercase;
+  color: white;
+  font-size: 1.7rem;
+  font-weight: 900;
+  text-shadow: 1px 1px black;
 }
 
 .contactSupportImage {
@@ -780,6 +786,7 @@ input:active {
   font-size: 1.7rem;
   font-weight: 900;
   text-shadow: 1px 1px black;
+  margin-right: 30px;
 }
 
 /* .contactCardText {
